crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@block_super_err.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{{ super() }}"
info: {}
input_file: crates/dbt-jinja/minijinja/tests/inputs/block_super_err.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "cannot super outside of block",
    name: "block_super_err.txt",
    line: 1,
}

invalid operation: cannot super outside of block
(in block_super_err.txt:1)
----------------------------- block_super_err.txt -----------------------------
   1 > {{ super() }}
     i ^^^^^^^^^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
