crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_bad_dotted_assign_macro.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% macro foo(bar.baz) %}\n  ...\n{% endmacro %}"
info: {}
input_file: crates/dbt-jinja/minijinja/tests/inputs/err_bad_dotted_assign_macro.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "unexpected `.`, expected `,`",
    name: "err_bad_dotted_assign_macro.txt",
    line: 1,
}

syntax error: unexpected `.`, expected `,`
(in err_bad_dotted_assign_macro.txt:1)
----------------------- err_bad_dotted_assign_macro.txt -----------------------
   1 > {% macro foo(bar.baz) %}
     i                 ^ syntax error
   2 |   ...
   3 | {% endmacro %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
