crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_bad_dotted_assign_with.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% with foo.bar = 42 %}\n  ...\n{% endwith %}"
info: {}
input_file: crates/dbt-jinja/minijinja/tests/inputs/err_bad_dotted_assign_with.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "unexpected `.`, expected assignment operator",
    name: "err_bad_dotted_assign_with.txt",
    line: 1,
}

syntax error: unexpected `.`, expected assignment operator
(in err_bad_dotted_assign_with.txt:1)
----------------------- err_bad_dotted_assign_with.txt ------------------------
   1 > {% with foo.bar = 42 %}
     i            ^ syntax error
   2 |   ...
   3 | {% endwith %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
